--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -16,7 +16,6 @@
             <c:set var="root" value="${request.contextPath}" />
             <div class="container" >
                 <h2>View Roles</h2>
-                <p:panel header="View Roles" style="margin-bottom:10px;" >
                     <h:form id="roleform" >
                         <!--Only should company selection if it is super user-->
 
@@ -32,24 +31,24 @@
                         </c:if>
 
                         <!--Display Role information accordingly-->
-                        <p:contextMenu for="rolesData">
-                            <p:menuitem value="View detail" update="roleDetail" icon="ui-icon-search" oncomplete="toggleModal();"/>
-                            <p:menuitem value="Delete" update="rolesData" icon="ui-icon-close" oncomplete="deleteModal();" />
-                        </p:contextMenu>
-
+                     
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 
                         <p:dataTable id="rolesData" var="role" rowKey="#{role.userRoleId}" value="#{viewCompanyRoles.roles}" 
                                      paginator="true"
-                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rowsPerPageTemplate="20,50,100"
-                                     selection="#{viewCompanyRoles.selectedRole}" selectionMode="single" >
-                            <p:column headerText="roleName">
+                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+                            <p:column headerText="roleName" filterBy="#{role.roleName}" filterMatchMode="contains">
                                 <h:outputText value="#{role.roleName}" />
                             </p:column>
 
                             <p:column headerText="description">
                                 <h:outputText value="#{role.description}" />
+                            </p:column>
+                            <p:column headerText="Update">
+                            <p:commandButton action="#{viewCompanyRoles.selectRole(role)}" oncomplete="toggleModal();" update=":roleform:roleDetail" value="Update"/>
+                            </p:column>
+                            <p:column headerText="Delete">
+                            <p:commandButton action="#{viewCompanyRoles.selectRole(role)}" oncomplete="deleteModal();" value="Delete"/>
                             </p:column>
 
                         </p:dataTable>
@@ -192,8 +191,8 @@
                                     </div>
                                     <div class="modal-footer">
                                         <p:growl id="growl" showDetail="true" sticky="true" />
-                                        <p:commandButton value="Update" update="growl" styleClass="btn"  actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
-                                        <p:commandButton value="Close" styleClass="btn" pt:data-dismiss="modal"></p:commandButton>
+                                        <p:commandButton value="Update" update="growl"  actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
+                                        <p:commandButton value="Close"  pt:data-dismiss="modal"></p:commandButton>
                                     </div>
                                 </div>
                             </div>
@@ -211,8 +210,8 @@
                                         <h4>Are you sure you want to delete this role?</h4>
                                     </div>
                                     <div class="modal-footer">
-                                        <p:commandButton value="Yes" styleClass="btn btn-success" update=":roleform:rolesData" actionListener="#{viewCompanyRoles.deleteRole}" pt:data-dismiss="modal"></p:commandButton>
-                                        <p:commandButton value="No" styleClass="btn btn-danger" pt:data-dismiss="modal"></p:commandButton>
+                                        <p:commandButton value="Yes" update=":roleform:rolesData" actionListener="#{viewCompanyRoles.deleteRole}" pt:data-dismiss="modal"></p:commandButton>
+                                        <p:commandButton value="No" pt:data-dismiss="modal"></p:commandButton>
 
                                     </div>
                                 </div>
@@ -227,7 +226,6 @@
                             $("#deleteConfirm").modal('show');
                         }
                     </script>
-                </p:panel>
 
             </div>
         </ui:define>
