--- a/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
@@ -21,6 +21,7 @@
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
