--- a/MerlionPortal/MerlionPortal-war/web/oes/orderdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/orderdetail.xhtml
@@ -2,8 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
@@ -15,12 +14,12 @@
                 <p:submenu label="QUOTATION" >
                     <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
                     <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
-                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="ORDERS" >
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
@@ -45,49 +44,32 @@
 
                 </h:panelGrid>
             </p:fieldset>
+
+            <br></br>
+            <br></br>
+            <p:dataTable var="lineItem" value="#{salesOrderManagedBean.myOrder.productOrderLineItemList}">
+                <p:column headerText="Product">
+                    <h:outputText value="#{lineItem.productproductId.productName}" />
+                </p:column>
+
+                <p:column headerText="Description">
+                    <h:outputText value="#{lineItem.productproductId.description}" />
+                </p:column>
+
+                <p:column headerText="Category">
+                    <h:outputText value="#{lineItem.productproductId.category}" />
+                </p:column>
+                <p:column headerText="Unit Price">
+                    <h:outputText value="#{lineItem.price}" />
+                </p:column>
+                <p:column headerText="Quantity">
+                    <h:outputText value="#{lineItem.quantity}" />
+                </p:column>
+                <p:column headerText="Value">
+                    <h:outputText value="#{lineItem.quantity*lineItem.price}" />
+                </p:column>
+            </p:dataTable>
         </h:form>
-        <br></br>
-        <br></br>
-        <p:dataTable var="lineItem" value="#{salesOrderManagedBean.myOrder.productOrderLineItemList}">
-            <p:column headerText="Product">
-                <h:outputText value="#{lineItem.productproductId.productName}" />
-            </p:column>
-
-            <p:column headerText="Description">
-                <h:outputText value="#{lineItem.productproductId.description}" />
-            </p:column>
-
-            <p:column headerText="Category">
-                <h:outputText value="#{lineItem.productproductId.category}" />
-            </p:column>
-            <p:column headerText="Unit Price">
-                <h:outputText value="#{lineItem.price}" />
-            </p:column>
-            <p:column headerText="Quantity">
-                <h:outputText value="#{lineItem.quantity}" />
-            </p:column>
-            <p:column headerText="Value">
-                <h:outputText value="#{lineItem.quantity*lineItem.price}" />
-            </p:column>
-        </p:dataTable>
-        <p:commandButton action="viewallpo" value="Cancel">
-        </p:commandButton> 
-        <p:commandButton action="#{salesOrderManagedBean.checkCredit()}" value=" Check customer credit">
-        </p:commandButton> 
-        <p:commandButton action="#{salesOrderManagedBean.generateSo()}" value=" Generat Sales Order">
-        </p:commandButton> 
-        
-        <p:panel header="Reject Purchase Order" style="margin-bottom:10px;">
-            <h:panelGrid columns="2" cellpadding="5">
-                <p:outputLabel for="Reason" value="Reject Reson " />
-                <p:selectOneMenu id="reson" value="#{dropdownView.reason}" style="width:150px">
-                    <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
-                    <f:selectItems value="#{dropdownView.rejectReasons}" />
-                </p:selectOneMenu>
-            </h:panelGrid>
-            <p:separator />
-            <p:commandButton value="Reject this Order" update="msgs" actionListener="#{salesOrderManagedBean.rejectPo()}" icon="ui-icon-check" />
-        </p:panel>
     </h:body>
 </html>
 
