--- a/MerlionPortal/MerlionPortal-war/web/oes/viewallpo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewallpo.xhtml
@@ -8,7 +8,7 @@
         <title>View all Purchase Order</title>
     </h:head>
     <h:body>
-        <h1>Saved Order </h1>
+        <h1>All Purchase Order </h1>
         <h:form id="formMain">  
             <p:growl id="messages"/>        
             <p:menubar>
@@ -22,6 +22,7 @@
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
