--- a/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/editsavedorder.xhtml
@@ -22,6 +22,7 @@
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
@@ -147,7 +148,7 @@
         </h:form>
         <br></br>
         <br></br>
-        <br></br>$
+        <br></br>
         <br></br>
 
     </h:body>
