--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -20,7 +20,9 @@
                 <p:submenu label="ORDERS" >
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />                    
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
+
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
