--- a/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
@@ -29,6 +29,7 @@
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
@@ -138,6 +139,9 @@
                 </p:column>
                 <p:column headerText="Price">
                     <h:outputText value="#{lineItem.price}" />
+                </p:column>
+                <p:column headerText="Availability">
+                    <h:outputText value="#{purchaseOrderManagedBean.checkAvailability(lineItem)}" />
                 </p:column>
 
                 <p:column style="width:32px">
