--- a/MerlionPortal/MerlionPortal-war/web/oes/viewallrequests.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewallrequests.xhtml
@@ -23,6 +23,7 @@
                     <p:menuitem value="Create Order" url="pogeneration.xhtml" />
                     <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                     <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
                 </p:submenu>
                 <p:submenu label="REPORTS" >
                 </p:submenu>
@@ -50,8 +51,11 @@
             <br></br>
             <p:commandButton action="#{quotationManagedBean.showRequest()}" value="View Request">
                 <f:param name="pageId" value="1" />
-            </p:commandButton>        
-            
+            </p:commandButton>   
+            <br></br>
+            <p:commandButton action="#{quotationManagedBean.editQuotation()}" value="Generate Quotation">
+            </p:commandButton> 
+
             <c:if test="#{quotationManagedBean.checkUserIsOrderProccessing()}">
                 <br></br>
                 <p:commandButton action="#{quotationManagedBean.editQuotation()}" value="Generate Quotation">
