--- a/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
@@ -10,7 +10,12 @@
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
         <ui:param name="pageName" value="View Subscribers" />
-
+        
+        <ui:define name="more-imports">
+            <ui:insert>
+                <link rel="stylesheet" href="${root}/css/viewsubscribers.css" type="text/css" />
+            </ui:insert>
+        </ui:define>
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container" >
