Take Search all fields out of table on top right side above table

--- a/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
@@ -13,7 +13,7 @@
         
         <ui:define name="more-imports">
             <ui:insert>
-                <link rel="stylesheet" href="${root}/css/viewsubscribers.css" type="text/css" />
+                <link rel="stylesheet" href="${request.contextPath}/css/viewsubscribers.css" type="text/css" />
             </ui:insert>
         </ui:define>
         <!-- Override Content -->
